--- a/Samples/azure-pipelines.yml
+++ b/Samples/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
       name: microsoft/PowerAppsTestAutomation
       ref: master
       # Name of the GitHub OAuth ADO Service Connection
-      endpoint: <ADO GitHub OAuth Service Connection Name>
+      endpoint: github.com_Dheepak25
 
 parameters:
  - name: image
